--- a/src/components/todo/css/TodoItem.css
+++ b/src/components/todo/css/TodoItem.css
@@ -39,5 +39,15 @@
     justify-content: center;
     align-items: center;
 
+    display: none;
     /* flex: 1; */
+}
+
+.todo-item:hover .remove{
+    display: block;
+
+}
+
+.todo-item .remove:hover{
+    color:rgb(54, 20, 150)
 }
