# 할 일 조회, 등록 서버 요청처리

--- a/src/components/todo/css/TodoItem.css
+++ b/src/components/todo/css/TodoItem.css
@@ -51,3 +51,13 @@
 .todo-item .remove:hover{
     color:rgb(54, 20, 150)
 }
+
+.todo-item .check-circle.active {
+    border-color:#38d9a9;
+    color: #38d9a9;
+}
+
+.todo-item .text.finish {
+    color: #919396;
+    text-decoration: line-through;
+}
