--- a/src/components/todo/css/TodoTemplate.css
+++ b/src/components/todo/css/TodoTemplate.css
@@ -1,3 +1,4 @@
+
 .todo-template {
     width: 512px;
     height: 768px;
@@ -9,10 +10,26 @@
     box-shadow: 0 0 8px #aaa;
 
     /* 박스 x축 중앙 정렬 : 마진 좌우값을 auto로 설정 */
-    margin: 100px auto;
+    margin: 200px auto 100px;
 
     position: relative;
-
+    
     display: flex;
     flex-direction: column;
+}
+
+/* 로딩중 style */
+.loading {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%); 
+}
+.loading .spinner-border {
+    width: 200px;
+    height: 200px;
+    --bs-spinner-border-width: 1.5rem;
+}
+.loading .text-danger {
+    color: rgba(13, 245, 245, 0.767) !important;
 }
